--- a/README
+++ b/README
@@ -19,3 +19,21 @@ http://vamp-plugins.org/
 Code project for the BeatRoot Vamp Plugin:
 https://code.soundsoftware.ac.uk/projects/beatroot-vamp
 
+***
+
+If you make use of this software for any public or commercial purpose,
+we ask you to kindly mention the authors and Queen Mary, University of
+London in your user-visible documentation. We're very happy to see
+this sort of use but would much appreciate being credited, separately
+from the requirements of the software license itself.
+
+If you make use of this software for academic purposes, please cite
+the publications listed in the CITATION file.
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or (at
+your option) any later version.  See the file COPYING included with
+this distribution for more information.
+
+
